--- a/assets/css/circles.css
+++ b/assets/css/circles.css
@@ -1,7 +1,7 @@
 canvas{
 	width: 100%;
 	height: 100%;
-	background-color: black;
+	background-color: rgb(219, 206, 206);
 }
 body, html{
 	height: 100%;
